Thu Nov 28 16:19:18 CET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Added library versioning for shared libraries.  Affected
	  files configure.in.pre and lib/Makefile.am.pre.

Wed Nov 27 21:51:52 CET 2002  Jochen Eisinger <c0ffee@penguin-breeder.org>

	* Display INVITE and BAN lists as specified by SILC 1.2

Wed Nov 27 16:01:11 CET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Do not send invite list back unless asked (when sending
	  no arguments) or when list was modified.  Affected file
	  silcd/command.c.

	* Remove client from invite list in KILLED notify and in
	  KILL command.  Affected file silcd/command.c and
	  silcd/server.[ch].

	* Fixed bugs in invite list handling in INVITE command.
	  Affected files silcd/command.c and silcd/server_util.c.

	* Merged with Irssi 0.8.6.

	* Fixed UTF-8 in Irssi SILC Client, setlocale was missing.
	  Affected file irssi/src/fe-text/silc.c.

Mon Nov 25 18:21:43 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* The silc_argument_get_[first/next] now return the argument
	  type to caller.  Added silc_argument_payload_encode_one.

	  Affected files are lib/silccore/silcargument.[ch].

	* Added support for the SILC 1.2 INVITE command and new
	  invite lists to server.  Affected files are silcd/command.c,
	  silcd/server_util.[ch] and silcd/packet_[receive/send].[ch].

	* Added support for the SILC 1.2 BAN command and new
	  ban lists to server.  Affected files are silcd/command.c,
	  silcd/server_util.[ch] and silcd/packet_[receive/send].[ch].

	* Added support to client sending new INVITE command.  Affected
	  file is lib/silcclient/command.c.

	* Added support to client sending new BAN command.  Affected
	  file is lib/silcclient/command.c.

	* Added support for removing client from invite list when kicked
	  from channel, as SILC 1.2 dictates.  Affected files are
	  silcd/packet_receive.c and silcd/command.c.

Sun Nov 24 18:26:42 EET 2002  Pekka Riikonen <priikone@silcnet.org>
