@@ -228,6 +228,7 @@ settings = {
   };
   core = {
     server_reconnect_time = "10000";
+    resolve_reverse_lookup = "yes";
   };
   "fe-text" = { indent = "8"; };
 };
