@@ -1,3 +1,9 @@
+Thu Nov 28 17:17:11 CET 2002  Jochen Eisinger <c0ffee@penguin-breeder.org>
+
+	* Do reverse lookups for server when /connecting. Affected files
+	  irssi/silc.conf, irssi/src/core/servers.c, 
+	  irssi/src/core/net-nonblock.*
+	
 Thu Nov 28 16:19:18 CET 2002  Pekka Riikonen <priikone@silcnet.org>
 
 	* Added library versioning for shared libraries.  Affected
